ACS-11995 Fix CodeQL Issues (#1288)