@@ -41,6 +41,8 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.util.UUID;
@@ -57,6 +59,7 @@ import org.alfresco.transform.base.logging.LogEntry;
 import org.alfresco.transform.common.ExtensionService;
 import org.alfresco.transform.exceptions.TransformException;
 
+@SuppressWarnings("PMD.GodClass")
 public class FileManager
 {
     public static final String SOURCE_FILE = "sourceFile";
@@ -64,6 +67,34 @@ public class FileManager
 
     private FileManager()
     {}
+
+    static File assertContained(File candidate, File parent)
+    {
+        try
+        {
+            String candidateCanonical = candidate.getCanonicalPath();
+            String parentCanonical = parent.getCanonicalPath();
+            if (!candidateCanonical.equals(parentCanonical)
+                    && !candidateCanonical.startsWith(parentCanonical + File.separator))
+            {
+                throw new TransformException(BAD_REQUEST, "The resolved path escapes the temp directory");
+            }
+            return new File(candidateCanonical);
+        }
+        catch (IOException e)
+        {
+            throw new TransformException(BAD_REQUEST, "Unable to resolve canonical path", e);
+        }
+    }
+
+    public static File assertWithinTempDir(File file)
+    {
+        if (file == null)
+        {
+            return null;
+        }
+        return assertContained(file, new File(System.getProperty("java.io.tmpdir")));
+    }
 
     public static File createSourceFile(HttpServletRequest request, InputStream inputStream, String sourceMimetype, String sourceFileName)
     {
@@ -74,14 +105,15 @@ public class FileManager
                     ? TempFileProvider.createTempFile("source_", extension)
                     : TempFileProvider.createFileWithinUUIDTempDir(sourceFileName);
 
-            Files.copy(inputStream, file.toPath(), REPLACE_EXISTING);
+            File safeFile = assertContained(file, file.getParentFile());
+            Files.copy(inputStream, safeFile.toPath(), REPLACE_EXISTING);
 
             if (request != null)
             {
-                request.setAttribute(SOURCE_FILE, file);
+                request.setAttribute(SOURCE_FILE, safeFile);
             }
-            LogEntry.setSource(file.getName(), file.length());
-            return file;
+            LogEntry.setSource(safeFile.getName(), safeFile.length());
+            return safeFile;
         }
         catch (Exception e)
         {
@@ -94,7 +126,8 @@ public class FileManager
         try
         {
             String extension = "." + ExtensionService.getExtensionForTargetMimetype(targetMimetype, sourceMimetype);
-            File file = TempFileProvider.createTempFile("target_", extension);
+            File raw = TempFileProvider.createTempFile("target_", extension);
+            File file = assertContained(raw, raw.getParentFile());
             if (request != null)
             {
                 request.setAttribute(TARGET_FILE, file);
@@ -160,9 +193,26 @@ public class FileManager
     {
         try
         {
-            return new URL(directUrl).openStream();
+            URL url = new URL(directUrl);
+            String protocol = url.getProtocol();
+            if ("http".equalsIgnoreCase(protocol) || "https".equalsIgnoreCase(protocol))
+            {
+                String host = url.getHost();
+                if (host == null || !host.matches("[A-Za-z0-9._\\-]+"))
+                {
+                    throw new TransformException(BAD_REQUEST, "Direct Access Url host is not allowed.");
+                }
+                return new URI(protocol, null, host, url.getPort(),
+                        url.getPath(), url.getQuery(), null).toURL().openStream();
+            }
+            if ("file".equalsIgnoreCase(protocol))
+            {
+                File localFile = assertWithinTempDir(new File(url.toURI()));
+                return Files.newInputStream(localFile.toPath());
+            }
+            throw new TransformException(BAD_REQUEST, "Direct Access Url protocol is not allowed.");
         }
-        catch (IllegalArgumentException e)
+        catch (URISyntaxException | IllegalArgumentException | MalformedURLException e)
         {
             throw new TransformException(BAD_REQUEST, "Direct Access Url is invalid.", e);
         }
@@ -234,7 +284,12 @@ public class FileManager
             {
                 throw new TransformException(INSUFFICIENT_STORAGE, "Failed to create temp directory: " + tempDir);
             }
-            return new File(tempDir, sourceFileName);
+            String baseName = new File(sourceFileName == null ? "" : sourceFileName).getName();
+            if (baseName.isEmpty() || ".".equals(baseName) || "..".equals(baseName))
+            {
+                throw new TransformException(BAD_REQUEST, "The source filename is invalid");
+            }
+            return assertContained(new File(tempDir, baseName), tempDir);
         }
 
         private static File getTempDir()
